Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15479

Empty string is erroneously allowed as a GEOMETRY column value

    XMLWordPrintable

Details

    • Can result in unexpected behaviour
    • Q2/2026 Server Maintenance

    Description

      DROP TABLE IF EXISTS t1;
      CREATE TABLE t1 (id INT, a GEOMETRY);
      INSERT INTO t1 VALUES (10,'');
      SELECT * FROM t1;
      

      +------+------+
      | id   | a    |
      +------+------+
      |   10 |      |
      +------+------+
      

      Empty string is not a valid GEOMETRY value, it should be prohibited.

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.