MDEV-15479 Empty string is erroneously allowed as a GEOMETRY column value.

Empty string disallowed.